...
                Text(it, color = MaterialTheme.colorScheme.primary, style = MaterialTheme.typography.bodySmall)
            }
            Spacer(Modifier.height(4.dp))

            Tabla(
                columnas = listOf(
                    ColumnaTabla("Nombre", 2f),
                    ColumnaTabla("Correo", 2.6f),
                    ColumnaTabla("Preferencia", 2f),
                    ColumnaTabla("Rol", 1.4f),
                    ColumnaTabla("Acciones", 2.2f)
                ),
                filas = usuarios,
                clave = { it.uid },
...
